etiqueta head en index.html modificada

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="wiki project for Id For Ideas" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, ReactJS, Wiki" />
+    <title>Tot inteligencia</title>
   </head>
   <body>
     <div id="root"></div>
