install and basic configuration of tailwind

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="wiki project for Id For Ideas" />
     <meta name="keywords" content="HTML, CSS, JavaScript, ReactJS, Wiki" />
-    <title>Tot inteligencia</title>
+    <title>TOT</title>
   </head>
   <body>
     <div id="root"></div>
