--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="wiki project for Id For Ideas" />
     <meta name="keywords" content="HTML, CSS, JavaScript, ReactJS, Wiki" />
-    <title>TOT</title>
+    <title>WikiTOT</title>
   </head>
   <body>
     <div id="root"></div>
