create funcionalities and about us section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="wiki project for Id For Ideas" />
     <meta name="keywords" content="HTML, CSS, JavaScript, ReactJS, Wiki" />
